--- a/index.html
+++ b/index.html
@@ -8,13 +8,19 @@
   </head>
   <body>
     <header>
-      <h1 class="header">Hallie Johnson Vocal Studio</h1>
+      <h2 id="header" class="headerWelcome">Welcome to</h2>
+      <h1 id="header" class="header">Hallie Johnson's Vocal Studio!</h1>
     </header>
     <nav>
       <!--Make navigation banner here-->
     </nav>
     <main>
       <!--Primary Content of page-->
+      <section id="messageContainer1">
+        <p>
+          We're currently under construction right now, but we'll be online soon!
+        </p>
+      </section>
     </main>
     <footer>
       <!--Social Media Links, etc.-->
